--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-step-progress": "^1.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
