--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -19,9 +20,11 @@
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-step-progress": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
