--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.13.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "^5.17.0",
